# swirly-cpp

./: .clang-format  .clang-tidy  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeGraphVizOptions.cmake  CMakeLists.txt  CNAME  COPYING  Doxyfile.h  Doxyfile.in  README.md  README.org  clang-format.sh.in  clang-tidy.sh  cppcheck.sh.in  format.sh  tidy.sh
data/: CMakeLists.txt  coal.sql  coffee.sql  corp.sql  forex.sql
db/: CMakeLists.txt  coal.sql  coffee.sql  corp.sql  forex.sql  schema.sql  test.sql
etc/sql/: CMakeLists.txt  coal.sql  coffee.sql  corp.sql  forex.sql  schema.mysql  schema.sql  schema.sqlite  test.sql
example/: CMakeLists.txt  Scratch.cpp  apply.cpp  cli.cpp  cli.py  clnt.cpp  dump.cpp  exchd.c  jdtoymd.c  perf.c  repl.cpp  rest.cpp  scratch.cpp  servd.c  shell.cpp  skel.cpp  sqlstored.c  ymdtojd.c
example/helloworld/: CMakeLists.txt  Main.cpp
image/: CMakeLists.txt  OrderState.uml  SessState.uml  TargetArch.uml
src/ash/: CMakeLists.txt  Daemon.cpp  Exception.cpp  Log.cpp  RefCounted.cpp  Stream.cpp  String.cpp  System.cpp  Time.cpp  bank.c  daemon.c  date.c  dlnode.c  dlnode.h  err.c  err.h  lexer.c  lexer.rl  list.c  list.h  log.c  pack.c  prioq.c  queue.c  queue.h  rbnode.c  rbnode.h  refcounted.cpp  shlex.c  shlex.rl  slnode.c  slnode.h  stack.c  stack.h  store.c  tree.c  tree.h  util.c
src/bench/: CMakeLists.txt  FixBench.cpp  LobBench.cpp  MicroBench.cpp  MicroBench.hxx  QueueBench.cpp  TimerBench.cpp
src/dbr/: CMakeLists.txt  accnt.c  accnt.cpp  async.c  bank.c  best.cpp  book.c  bool.c  cache.c  clnt.c  conv.c  core.c  ctx.c  ctx.cpp  daemon.c  defs.c  dlnode.c  err.c  except.cpp  exch.c  handler.c  iter.cpp  journ.c  journ.cpp  level.cpp  lexer.c  list.c  log.c  main.c  market.c  market.cpp  match.cpp  model.c  model.cpp  msg.c  node.c  node.cpp  order.cpp  pack.c  pool.c  (+37 more)
src/dbrd/: CMakeLists.txt  config.c  config.h  dbrd.c
src/dbrpy/: CMakeLists.txt  cdbrpy.pxd  dbr.pxd  dbr_shell  dbrpy.c  dbrpy.h  dbrpy.pyx  dbrweb.py  setup.py  string.pxd  zmq.pxd
src/disrupt/: CMakeLists.txt  ConsumerInfo.cpp  ConsumerInfo.hpp  Cursored.cpp  Cursored.hpp  Disruptor.cpp  Disruptor.hpp  EventHandler.cpp  EventHandler.hpp  EventProcessor.cpp  EventProcessor.hpp  Executor.cpp  Executor.hpp  Main.cpp  RingBuffer.cpp  RingBuffer.hpp  Runnable.cpp  Runnable.hpp  Sequence.cpp  Sequence.hpp  SequenceBarrier.cpp  SequenceBarrier.hpp  Sequenced.cpp  Sequenced.hpp  Sequencer.cpp  Sequencer.hpp  Types.cpp  Types.hpp
src/elm/: Asset.cpp  BookSide.cpp  CMakeLists.txt  Contr.cpp  Date.cpp  DateUtil.cpp  Exception.cpp  Exec.cpp  Factory.cpp  Journ.cpp  Level.cpp  Market.cpp  MarketBook.cpp  MarketData.cpp  MarketView.cpp  Model.cpp  Order.cpp  Posn.cpp  Quote.cpp  Rec.cpp  Request.cpp  Trader.cpp  Types.cpp  accnt.c  accnt.h  asset.cpp  async.c  cache.c  cache.h  clnt.c  contr.cpp  ctx.c  ctx.h  err.c  err.h  exec.c  exec.h  factory.cpp  format.c  format.h  (+30 more)
src/example/: CMakeLists.txt  EchoClnt.cpp  EchoServ.cpp  FixApp.cpp  FixParse.cpp  HttpServ.cpp
src/fig/: CMakeLists.txt  EmailSet.hpp  Exception.cpp  Exception.hpp  Match.cpp  Match.hpp  Mock.cpp  Response.cpp  RestRequest.cpp  RestRequest.hpp  RestRequest.rl  Serv.cpp  ServFactory.cpp  ServFactory.hpp  TraderSess.cpp  TraderSessSet.cpp  TraderSessSet.hpp  accnt.c  accnt.h  async.c  async.h  book.c  book.h  cache.c  cache.h  clnt.c  clnt.h  ctx.c  dispatch.c  exch.c  exec.c  exec.h  index.c  index.h  market.c  market.h  match.c  match.h  ordidx.c  ordidx.h  (+16 more)
src/fir/: CMakeLists.txt  EntitySet.cpp  Exception.cpp  Exception.hpp  Rest.cpp  RestRequest.cpp  RestRequest.hpp  RestRequest.rl  dump.cpp  sqlite.c  sqlite.h  sqljourn.c  sqlmod.c  sqlmodel.c  sqlstore.c  sqlstore.h
src/httpd/: CMakeLists.txt  Exception.cpp  Exception.hpp  Main.cpp  Mock.cpp  Mock.hpp  Mongoose.cpp  Mongoose.hpp  RestServ.hpp  Stream.cpp  Stream.hpp  client.py
src/scsh/: CMakeLists.txt  scsh.cpp
src/sqlite/: CMakeLists.txt  Factory.cpp  Journ.cpp  Journ.hpp  Sqlite.hpp
src/swirly/: CMakeLists.txt  Config.h.in  Config.hpp.in  Defs.hpp
src/swirlyd/: CMakeLists.txt  EntitySet.cpp  EntitySet.hpp  EntitySet.hxx  EntitySet.ut.cpp  Exception.cpp  Exception.hpp  FixApp.cpp  FixApp.hxx  FixHandler.cpp  FixHandler.hxx  FixMaker.cpp  FixMaker.hxx  FixMakerBot.cpp  FixMakerBot.hxx  HttpConn.cpp  HttpConn.hpp  HttpMain.cpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  HttpServ.cpp  HttpServ.hpp  HttpSess.cpp  HttpSess.hpp  Main.cpp  Mock.cpp  Mock.hpp  Mongoose.hpp  Page.cpp  Page.hpp  Page.hxx  Page.ut.cpp  RestApp.cpp  RestApp.hpp  RestApp.hxx  RestBody.cpp  RestBody.hpp  RestBody.hxx  (+12 more)
src/swirlyui/: Asset.cpp  Asset.hxx  AssetModel.cpp  AssetModel.hxx  AssetView.cpp  AssetView.hxx  CMakeLists.txt  Client.cpp  Client.hxx  Contr.cpp  Contr.hxx  ContrModel.cpp  ContrModel.hxx  ContrView.cpp  Exec.cpp  Exec.hxx  ExecModel.cpp  ExecModel.hxx  ExecView.cpp  ExecView.hxx  HttpClient.cpp  HttpClient.hxx  Instr.cpp  Instr.hxx  InstrModel.cpp  InstrModel.hxx  InstrView.cpp  InstrView.hxx  Level.cpp  Level.hxx  Main.cpp  MainWindow.cpp  MainWindow.hxx  Market.cpp  Market.hxx  MarketForm.cpp  MarketForm.hxx  MarketModel.cpp  MarketModel.hxx  MarketView.cpp  (+33 more)
src/tool/: AppBench.cpp  Bench.cpp  CMakeLists.txt  DbToCsv.cpp  DbToDsv.cpp  DbToJson.cpp  Dump.cpp  EchoClnt.cpp  EchoServ.cpp  FiberBench.cpp  HdrDecoder.cpp  Hiccup.cpp  LobBench.cpp  MicroBench.cpp  QueueBench.cpp  Scratch.cpp  ServBench.cpp  TimerBench.cpp
test/: CMakeLists.txt  accnt.c  accnt.cpp  ash.c  ash.cpp  book.cpp  ctx.c  data.cpp  err.c  err.cpp  exec.c  exec.cpp  factory.cpp  factory.hpp  format.cpp  ftest.py  journ.cpp  journ.hpp  json.c  json.cpp  market.c  market.cpp  mock.cpp  mock.hpp  model.c  model.cpp  model.h  model.hpp  msg.cpp  order.cpp  pack.cpp  pool.c  pool.cpp  prioq.cpp  proto.cpp  rec.c  rec.cpp  rurl.c  serv.cpp  side.c  (+13 more)
test/ash/: Array.cpp  CMakeLists.txt  Compare.cpp  Config.cpp  Daemon.cpp  Defs.cpp  Enum.cpp  Exception.cpp  Finally.cpp  JulianDay.cpp  Log.cpp  Main.cpp  Math.cpp  Optional.cpp  RefCounted.cpp  Stream.cpp  (+10 more)
(+1714 files in other folders)
